force-app/main/default/objects/Referral__c/fields/Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences__c</fullName>
    <label>Contact Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>