force-app/main/default/objects/Referral__c/fields/Needs_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Needs_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Follow Up</label>
    <type>Checkbox</type>
</CustomField>