force-app/main/default/objects/Referral__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <externalId>true</externalId>
    <label>Program ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>