force-app/main/default/objects/Referral__c/fields/Receiver_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Last_Name__c</fullName>
    <label>Receiver Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>