force-app/main/default/objects/Referral__c/fields/Receiver_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Phone_Number__c</fullName>
    <label>Receiver Phone Number</label>
    <type>Phone</type>
</CustomField>