force-app/main/default/objects/Referral__c/fields/Sender_Username__c.field-meta.xml
<CustomField>
    <fullName>Sender_Username__c</fullName>
    <label>Sender Username</label>
    <type>Email</type>
</CustomField>