force-app/main/default/objects/Referral__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>couldnt_get_help</fullName>
                <label>couldn’t get help</label>
            </value>
            <value>
                <fullName>got_help</fullName>
                <label>got help</label>
            </value>
            <value>
                <fullName>needs_action</fullName>
                <label>needs action</label>
            </value>
            <value>
                <fullName>no_longer_interested</fullName>
                <label>no longer interested</label>
            </value>
            <value>
                <fullName>not yet helped</fullName>
            </value>
            <value>
                <fullName>referred elsewhere</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
            <value>
                <fullName>couldn’t contact</fullName>
            </value>
            <value>
                <fullName>not eligible</fullName>
            </value>
            <value>
                <fullName>eligible</fullName>
            </value>
            <value>
                <fullName>no capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>